--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
+    "path": "^0.12.7"
   }
 }
