--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "path": "^0.12.7",
-    "nodemailer": "^5.1.1"
+    "nodemailer": "^5.1.1",
+    "stripe": "^10.0.0"
   }
 }
