--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "mongoose": "^6.4.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.19",
-    "path": "^0.12.7",
     "nodemailer": "^5.1.1",
+    "nodemon": "^2.0.19",
+    "otp-generator": "^4.0.0",
+    "path": "^0.12.7",
     "stripe": "^10.0.0"
   }
 }
